2008-01-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed Bug 350864 - Refactory tools - renaming.

2008-01-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed 350861: Autocomplete displays hidden items

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Fixed some infinite
	  loops when a class inherits from itself due to invalid code. Fixes bug
	  #350855.

2008-01-03  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBindingCompilerManager.cs: Check C# compiler exit code to detect
	  when it crashes. Should fix "Bug 351347 - MD ignores mcs/gmcs crash".

2007-12-31  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/AssemblyInfo.xft.xml: Add revision to version number.
	* templates/EmptyCSharpFile.xft.xml: Use standard header instead of
	  hardcoded header.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Updated project files. The order of extended properties
	  won't change anymore.

2007-12-13  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBinding.addin.xml: Updated. Prefix C# templates IDs with "CSharp" so
	  that they're not invading the generic part of the unique ID landscape.
	* CSharpBinding.mdp, Makefile.am: Updated.
	* templates/ConsoleProject.xpt.xml, templates/GnomeSharp2Project.xpt.xml,
	  templates/GtkSharp2Project.xpt.xml, templates/AssemblyInfo.xft.xml,
	  templates/GladeSharp2Project.xpt.xml, templates/Library.xpt.xml: Move
	  common files out of project templates to ease maintenance. Make
	  AssemblyInfo more readable. Enable standard headers.
	* templates/GnomeSharpProject.xpt.xml, templates/GtkSharpProject.xpt.xml,
	  templates/GladeSharpProject.xpt.xml,
	  templates/GnomeSharpProgram.xft.xml: Remove obsolete templates.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/CodeGenerator.cs,
	  Parser/ExpressionFinder.cs: Fix warnings.
