@@ -1,3 +1,14 @@
+2008-01-14  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/CSharpTextEditorExtension.cs: fixed Bug 350881 - Code completion not
+	  working in a specific case.
+
+2008-01-11  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* CSharpLanguageBinding.cs, CSharpBindingCompilerManager.cs: Don't always
+	  set the DEBUG define when debug info is emitted. However, add it to the
+	  defines list for new debug configurations.
+
 2008-01-10  Mike Krüger <mkrueger@novell.com> 
 
 	* Parser/CodeGenerator.cs: Fixed Bug 350864 - Refactory tools - renaming.
